--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -9,6 +9,9 @@ output:
 
 ## Loading and preprocessing the data
 ```{r}
+fileUrl<-"https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+download.file(fileUrl, destfile="./activity.zip", method="curl")
+dateDownloaded<-date()
 activity <- read.csv("~/Documents/reprod_res/RepData_PeerAssessment1/activity.csv", stringsAsFactors=FALSE)
 
         ##removing steps=0 while keeping steps=NA
